2007-04-26 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 395: add memset's in linux/capture.c to avoid valgrind errors
	           (thanks to Jon Schewe)
	* SVN 394: changed "min_bytes" to "unit_bytes" in
	           dc1394_format7_get_packet_para()
	
2007-03-18 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 393: Add a "juju" directory for the new kernel stack from Kristian
		   Hogsberg. Thanks to... Kristian Hogsberg for the big patch ;)

2007-03-12 Peter Antoniac http://sourceforge.net/users/theseinfeld
	* SVN 392: changed Makefile.am, configure.in to include the Doxygen part.
		   Added: acinclude.m4, aminclude.am and Doxyfile.in to configure
		   the Doxygen part. This changes enable the doxygen documentation
		   generation for the project, without interference with previous
		   framework. Added/changed some comments in the Header files
		   (dc1394/control.h, dc1394/conversions.h, dc1394/register.h,
		   dc1394/utils.h) to demonstrate the way the documentation works.

2007-03-01 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 391: change the function returning the number of bytes per pixel
		   to a function that returns bits per pixel. That way we stay
		   with int's and avoid round-off errors.
	
2007-02-23 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 390: rewrite the ROI setting function. This fixes a serious issue
		   that occured when changing F7 parameters (color coding,
		   among others)

2007-02-21 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 389: rewite the expression defining the stride; cosmetic changes
		   to the latest changelog entries
	
2007-02-20 David Moore http://davemoore.org/
	* SVN 388: Improvements to error handling in channel/bandwidth
		   allocation.
	* SVN 387: Bug fixes for trigger source get/set

2007-02-19 David Moore http://davemoore.org/
	* SVN 386: Changed DC1394_CAPTURE_FLAGS_DEFAULT to be interpreted at
		    runtime rather than at compile-time.