@@ -2,7 +2,7 @@ MAINTAINERCLEANFILES = Makefile.in
 AM_CPPFLAGS = -I $(top_srcdir)
 
 A = grab_gray_image grab_partial_image grab_color_image \
-	grab_color_image2 helloworld
+	grab_color_image2 helloworld ladybug
 B = dc1394_reset_bus
 
 if USE_LINUX
@@ -26,6 +26,9 @@ endif
 
 helloworld_SOURCES = helloworld.c
 helloworld_LDADD = $(LDADD) ../dc1394/libdc1394.la
+
+ladybug_SOURCES = ladybug.c
+ladybug_LDADD = $(LDADD) ../dc1394/libdc1394.la
 
 grab_gray_image_SOURCES = grab_gray_image.c
 grab_gray_image_LDADD = $(LDADD) ../dc1394/libdc1394.la
